# osquery

./: .artifactignore  .buckconfig  .buckversion  .clang-format  .cursorignore  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yml  .travis.yml  .watchmanconfig  ASSURANCE.md  Antique Mirror  Apple MacBook Pro  Apple Tv  Apple Watch  Apple iPad 2  Apple iPhone 5s  Apple iPhone 6  Apple iPhone 7  Apple iPhone SE  BUILD.md  CHANGELOG.md  CMakeLibs.txt  CMakeLists.txt  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Doxyfile  EasyCLA.md  GoPro Hero 5  Kia Sorento  LICENSE  Lenovo Tab  Makefile  PATENTS  README.md  SECURITY.md  (+25 more)
kernel/: CMakeLists.txt  Makefile  test.sh
kernel/include/: feeds.h
kernel/linux/: Makefile  hash.c  hide.c  hide.h  main.c  sysfs.c
kernel/src/: Info.plist  circular_queue_kern.c  circular_queue_kern.h  osquery.cpp  publishers.h
kernel/tools/: darwin.sh  provision_darwin.sh  unload_with_retry.sh
kernel/user/: Makefile
libraries/: CMakeLists.txt  third_party_libraries_manifest.json
libraries/cmake/: README.md
openframe/: CMakeLists.txt  openframe_authorization_manager.cpp  openframe_authorization_manager.h  openframe_authorization_manager_provider.h  openframe_encryption_service.cpp  openframe_encryption_service.h  openframe_token_extractor.cpp  openframe_token_extractor.h  openframe_token_refresher.cpp  openframe_token_refresher.h
osquery/: BUCK  CMakeLists.txt  config.h  core.h  database.h  devtools.h  filesystem.h  logger.h  registry.h  scheduler.h  status.h
osquery/bro/: BrokerManager.cpp  BrokerManager.h  CMakeLists.txt  QueryManager.cpp  QueryManager.h  utils.cpp  utils.h
osquery/carver/: BUCK  CMakeLists.txt  carver.cpp  carver.h  carver_utils.cpp  carver_utils.h
osquery/config/: BUCK  CMakeLists.txt  CmakeLists.txt  config.cpp  config.h  config_parser_plugin.cpp  config_parser_plugin.h  config_plugin.cpp  config_plugin.h  config_refresh.cpp  config_refresh.h  config_tests.cpp  packs.cpp  packs.h  plugin.h  update.cpp
osquery/core/: BUCK  CMakeLists.txt  CmakeLists.txt  base64.cpp  conversions.cpp  conversions.h  conversions_tests.cpp  core.h  error.cpp  error.h  expected.h  flagalias.h  flags.cpp  flags.h  flags_tests.cpp  get.h  hash.cpp  hash_tests.cpp  hashing.cpp  hashing.h  http.cpp  http.h  init.cpp  init.h  init_osquery.cpp  json.cpp  json.h  map_take.h  md5.h  process.h  process_shared.cpp  query.cpp  query.h  scope_guard.h  sha1.cpp  shutdown.cpp  shutdown.h  signing.cpp  signing.h  sql.cpp  (+24 more)
osquery/database/: BUCK  CMakeLists.txt  CmakeLists.txt  database.cpp  database.h  database_plugin.cpp  db_handle.cpp  db_handle.h  db_handle_tests.cpp  ephemeral.cpp  idatabaseinterface.h  query.cpp  query.h  query_tests.cpp  results.cpp  results.h  results_tests.cpp  tablecachedb.cpp
osquery/debug/: CMakeLists.txt  debug_only.h
osquery/devtools/: BUCK  CMakeLists.txt  CmakeLists.txt  devtools.h  printer.cpp  printer_tests.cpp  shell.cpp
osquery/dispatcher/: BUCK  CMakeLists.txt  bro.cpp  bro.h  dispatcher.cpp  dispatcher.h  dispatcher_tests.cpp  distributed.cpp  distributed.h  distributed_runner.cpp  distributed_runner.h  events.cpp  events_tests.cpp  io_service.cpp  io_service.h  query_profiler.h  scheduled_tasks_queue.cpp  scheduled_tasks_queue.h  scheduler.cpp  scheduler.h  task_schedule.cpp  task_schedule.h
osquery/distributed/: BUCK  CMakeLists.txt  distributed.cpp  distributed.h  distributed_tests.cpp  ondemand.cpp
osquery/ev2/: BUCK  CMakeLists.txt  buffered_subscription.h  event.cpp  manager.cpp  manager.h  publisher.cpp  publisher.h  simple_publisher.h  subscription.cpp  subscription.h
osquery/events/: BUCK  CMakeLists.txt  audit_flags.cpp  backup.CMakeLists.txt  eventer.cpp  eventer.h  eventfactory.cpp  eventfactory.h  eventpublisher.h  eventpublisherplugin.cpp  eventpublisherplugin.h  events.cpp  events.cpp~RF205e2bc.TMP  events.h  events_database_tests.cpp  events_tests.cpp  eventsubscriber.h  eventsubscriberplugin.cpp  eventsubscriberplugin.h  file_events_flags.cpp  kernel.cpp  kernel.h  pathset.h  stringmap_encoder.hpp  subscription.cpp  subscription.h  types.h
osquery/evgen/: CMakeLists.txt
osquery/examples/: CCLeaner Malware Search Using Query.md  CMakeLists.txt  example_extension.cpp  example_module.cpp  example_test.cpp  example_writable_table.cpp
osquery/experimental/: CMakeLists.txt  README.md
osquery/extensions/: BUCK  CMakeLists.txt  extensions.cpp  extensions.h  extensions_tests.cpp  handler.h  impl_fbthrift.cpp  impl_service.cpp  impl_thrift.cpp  interface.cpp  (+5 more)
plugins/: CMakeLists.txt
specs/: BUCK  CMakeLists.txt  agent_skills.table  arp_cache.table  atom_packages.table  authorized_keys.table  aws_meta.table  aws_metadata.table  azure_instance_metadata.table  azure_instance_tags.table  blacklist  block_devices.table  carbon_black_info.table  carves.table  carving.table  cb_info.table  certificates.table  chrome_extension_content_scripts.table  chrome_extensions.table  cpu_info.table  cpu_time.table  cpuid.table  crontab.table  curl.table  curl_certificate.table  denylist  device_file.table  disk_encryption.table  ec2_instance_metadata.table  etc_hosts.table  etc_protocols.table  etc_services.table  example.table  file_events.table  firefox_addons.table  groups.table  hardware_events.table  hash.table  interface_addresses.table  interface_details.table  (+47 more)
tests/: BUCK  CMakeLists.txt  test_util.cpp  test_util.h
tools/: CMakeLists.txt  README_WIN64.md  aggregate_query.cpp  audit.sh  benchmark.sh  build.ps1  build.sh  build_prebuilt.sh  com.facebook.osqueryd.plist  cpplint.py  flag_test.cpp  genapi.py  generate_buck_config.ps1  generate_xcode_project.sh  genpackage.py  gentable.py  gentables.py  get_platform.py  git-clang-format.py  hostname.cpp  lib.sh  make-win64-binaries.bat  make-win64-dev-env.bat  make_osx_package.sh  manage-osqueryd.ps1  osquery.flagfile  osquery.manifest.in  profile.py  provision-vs2015.ps1  provision.ps1  provision.sh  registry_test.cpp  remove.sh  replace.py  run.cpp  stress.py  sync.sh  test.cpp  time.cpp  uninstall_osquery_macOS.sh  (+4 more)
(+4767 files in other folders)
